@@ -1,3 +1,7 @@
+2003-05-22  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/munged.c(segv_handler): Added.
+
 2003-05-16  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libcommon/munge_defs.h:
